HIVE-29234: Iceberg: Validate HMS REST Catalog Client with OAuth2 (#6124)